force-app/main/default/objects/Pacing_Snapshot__c/Pacing_Snapshot__c.object-meta.xml
<CustomObject>
    <description>Daily materialized pacing snapshot. One row per Projection grain (Account + Category + Revenue Type + Year + Month) per day. Drives The Bible extract, Financial Report Builder, and Sales Ops KPI tiles.</description>
    <label>Pacing Snapshot</label>
    <nameField>
        <displayFormat>PACE-{000000}</displayFormat>
        <label>Pacing Snapshot Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pacing Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>