force-app/main/default/objects/Pacing_Snapshot__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pacing Snapshots</relationshipLabel>
    <relationshipName>Pacing_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>