force-app/main/default/objects/Pacing_Snapshot__c/fields/Actual_Amount__c.field-meta.xml
<CustomField>
    <fullName>Actual_Amount__c</fullName>
    <description>Rolled-up actuals from Projection__c.Actual_Amount__c at snapshot time.</description>
    <label>Actual Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>