force-app/main/default/objects/Pacing_Snapshot__c/fields/Booked_Amount__c.field-meta.xml
<CustomField>
    <fullName>Booked_Amount__c</fullName>
    <description>Sum of Projection amounts in Won stage for this grain on this date.</description>
    <label>Booked Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>