force-app/main/default/objects/Pacing_Snapshot__c/fields/Budget_Amount__c.field-meta.xml
<CustomField>
    <fullName>Budget_Amount__c</fullName>
    <description>Monthly budget from Budget__c for the same Account + Category + Revenue Type + Year + Month grain.</description>
    <label>Budget Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>