force-app/main/default/objects/Pacing_Snapshot__c/fields/Composite_Key__c.field-meta.xml
<CustomField>
    <fullName>Composite_Key__c</fullName>
    <description>System-managed upsert key: AccountId|CategoryId|RevenueType|Year|Month|SnapshotDate. One row per grain per day.</description>
    <externalId>true</externalId>
    <label>Composite Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>