force-app/main/default/objects/Pacing_Snapshot__c/fields/Forecast_Amount__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Amount__c</fullName>
    <description>Weighted forecast: Won×1.0 + Committed×0.6 + Pitched×0.3 + Working×0.1.</description>
    <label>Weighted Forecast</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>