force-app/main/default/objects/Pacing_Snapshot__c/fields/Last_Year_Amount__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_Amount__c</fullName>
    <description>Total Actual_Revenue__c for the same grain in the prior year (Year - 1, same Month).</description>
    <label>Last Year Actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>