force-app/main/default/objects/Pacing_Snapshot__c/fields/Pending_Amount__c.field-meta.xml
<CustomField>
    <fullName>Pending_Amount__c</fullName>
    <description>Sum of Projection amounts in Committed or Pitched stage (pre-weighted).</description>
    <label>Pending Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>