force-app/main/default/objects/Pacing_Snapshot__c/fields/Period_Month__c.field-meta.xml
<CustomField>
    <fullName>Period_Month__c</fullName>
    <label>Period Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>